# guinsoo-mujoco-platform

./: .gitignore  README.md  environment.yml  pyproject.toml
assets/robots/: README.md  openarm.json  ur5e.json  xlerobot.json
docs/: opengl-manual-acceptance.md
docs/data/: README.md
docs/superpowers/specs/: 2026-06-10-guinsoo-mujoco-platform-design.md
examples/controllers/: README.md
notebooks/: README.md  episode_analysis.ipynb
src/guinsoo_mujoco/: __init__.py  asset_downloader.py  assets.py  cli.py  controllers.py  data.py  logging_config.py  plotjuggler_analysis.py  recording.py  robots.py  run_catalog.py  runtime.py
src/guinsoo_mujoco/app/: __init__.py  log_handler.py  main.py  model.py  runs_panel.py  session.py  viewer.py
src/guinsoo_mujoco/demos/: __init__.py  base.py  legacy.py  registry.py
src/guinsoo_mujoco/operators/: __init__.py
tests/: test_asset_downloader.py  test_asset_manifest.py  test_assets_resolve.py  test_cli.py  test_controllers.py  test_demo_registry.py  test_ee_pose_avoid_controller.py  test_logging_config.py  test_plotjuggler_analysis.py  test_recording.py  test_repo_manifests.py  test_robot_registry.py  test_rrt_planner.py  test_run_browser.py  test_run_catalog.py  test_run_recorder.py  test_session.py  test_sim_studio_model.py  test_viewer_interaction.py
tests/demos/ur5e/: test_ee_pose_avoid_controller.py  (+1 more)
tests/operators/: test_collision.py  test_control.py  test_ik.py  test_joint_unwrap.py  test_normal_admittance.py  test_path.py  test_rrt_connect.py  test_sine_hfield.py  test_sine_surface.py
(+59 files in other folders)
